[gd_scene load_steps=13 format=3 uid="uid://6cykhroc05l8"]

[ext_resource type="Texture2D" uid="uid://b6dgmcx3tdlj2" path="res://Head.png" id="1_6u6at"]
[ext_resource type="Script" path="res://interface.gd" id="1_jgc4y"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_640nx"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_sybcf"]
bg_color = Color(0.933333, 0.721569, 0.282353, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pks3g"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4bxuh"]
bg_color = Color(0.407843, 0, 0.0509804, 1)

[sub_resource type="Animation" id="Animation_i60ds"]
resource_name = "levelUpButtonShine"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 0.52549, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_pwosd"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_27rjj"]
_data = {
"RESET": SubResource("Animation_pwosd"),
"levelUpButtonShine": SubResource("Animation_i60ds")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_0wsrv"]
animation = &"levelUpButtonShine"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kwjwd"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_tvibg"]
states/Start/position = Vector2(164, 95)
states/levelUpButtonShine/node = SubResource("AnimationNodeAnimation_0wsrv")
states/levelUpButtonShine/position = Vector2(349, 95)
transitions = ["Start", "levelUpButtonShine", SubResource("AnimationNodeStateMachineTransition_kwjwd")]

[node name="Interface" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_jgc4y")

[node name="ColorRect2" type="ColorRect" parent="."]
layout_mode = 2
offset_left = 121.0
offset_top = 29.0
offset_right = 305.0
offset_bottom = 164.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.607843)

[node name="GridContainer" type="GridContainer" parent="ColorRect2"]
layout_mode = 0
offset_left = 11.0
offset_top = 2.0
offset_right = 115.0
offset_bottom = 131.0
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 10
columns = 2

[node name="MaxHealth" type="RichTextLabel" parent="ColorRect2/GridContainer"]
layout_mode = 2
theme_override_colors/selection_color = Color(0, 0, 0, 1)
text = "MaxHealth
"
fit_content = true
autowrap_mode = 0

[node name="MaxHealthValue" type="RichTextLabel" parent="ColorRect2/GridContainer"]
layout_direction = 2
layout_mode = 2
text = "0
"
fit_content = true
autowrap_mode = 0

[node name="Attack" type="RichTextLabel" parent="ColorRect2/GridContainer"]
layout_mode = 2
text = "Attack
"
fit_content = true
autowrap_mode = 0

[node name="AttackValue" type="RichTextLabel" parent="ColorRect2/GridContainer"]
layout_mode = 2
text = "0
"
fit_content = true
autowrap_mode = 0

[node name="Armor" type="RichTextLabel" parent="ColorRect2/GridContainer"]
layout_mode = 2
theme_override_colors/selection_color = Color(0, 0, 0, 1)
text = "Armor
"
fit_content = true
autowrap_mode = 0

[node name="ArmorValue" type="RichTextLabel" parent="ColorRect2/GridContainer"]
layout_mode = 2
theme_override_colors/selection_color = Color(0, 0, 0, 1)
text = "0
"
fit_content = true
autowrap_mode = 0

[node name="Level" type="RichTextLabel" parent="ColorRect2/GridContainer"]
layout_mode = 2
theme_override_colors/selection_color = Color(0, 0, 0, 1)
text = "Level
"
fit_content = true
autowrap_mode = 0

[node name="LevelValue" type="RichTextLabel" parent="ColorRect2/GridContainer"]
layout_mode = 2
theme_override_colors/selection_color = Color(0, 0, 0, 1)
text = "0
"
fit_content = true
autowrap_mode = 0

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 133.0
offset_bottom = 210.0
texture = ExtResource("1_6u6at")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 3.525
anchor_top = 0.9
anchor_right = 3.525
anchor_bottom = 0.9
offset_left = 164.0
offset_top = 11.0
offset_right = 1027.0
offset_bottom = 112.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.607843)

[node name="BoxContainer" type="BoxContainer" parent="ColorRect"]
layout_mode = 0
offset_left = 48.0
offset_top = 2.0
offset_right = 827.0
offset_bottom = 100.0
alignment = 1
vertical = true

[node name="ExperienceBar" type="ProgressBar" parent="ColorRect/BoxContainer"]
custom_minimum_size = Vector2(50, 30)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_640nx")
theme_override_styles/fill = SubResource("StyleBoxFlat_sybcf")
value = 30.0
show_percentage = false

[node name="ExperienceNumbers" type="Label" parent="ColorRect/BoxContainer/ExperienceBar"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1.0
offset_top = -1.0
offset_right = 779.0
offset_bottom = 28.0
text = "0/0"
horizontal_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="ColorRect/BoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
theme_override_styles/background = SubResource("StyleBoxFlat_pks3g")
theme_override_styles/fill = SubResource("StyleBoxFlat_4bxuh")
value = 40.0
show_percentage = false

[node name="UsePrompt" type="Label" parent="."]
visible = false
layout_mode = 0
offset_left = 620.0
offset_top = 7.0
offset_right = 762.0
offset_bottom = 30.0
text = "Press F to interact"

[node name="btnSkillPoint" type="Button" parent="."]
visible = false
layout_mode = 0
offset_left = 306.0
offset_top = 9.0
offset_right = 345.0
offset_bottom = 45.0
theme_override_font_sizes/font_size = 20
text = "+"

[node name="AnimationTree" type="AnimationTree" parent="btnSkillPoint"]
libraries = {
"": SubResource("AnimationLibrary_27rjj")
}
tree_root = SubResource("AnimationNodeStateMachine_tvibg")
anim_player = NodePath("../AnimationPlayer")

[node name="lblFreeSkillPointCount" type="Label" parent="btnSkillPoint"]
layout_mode = 0
offset_left = 28.0
offset_top = 13.0
offset_right = 46.0
offset_bottom = 36.0
text = "1
"

[node name="AnimationPlayer" type="AnimationPlayer" parent="btnSkillPoint"]
libraries = {
"": SubResource("AnimationLibrary_27rjj")
}
